# python-ci-pipeline

./: LICENSE  noxfile.py  pyproject.toml
.github/workflows/: tests.yaml
src/python_ci_pipeline/: __init__.py  greeting.py  moin.py
tests/: test_greeting.py  test_moin.py
