[tool.poetry]
name = "python-ci-pipeline"
version = "0.1.0"
description = ""
license = "MIT"
readme = "README.md"
repository = "https://github.com/k00nan/python-ci-pipeline"
keywords = ["hypermodern"]
authors = ["kenan <kenan.catovic@hm.edu>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
nox = "^2023.4.22"
isort = "^5.12.0"
mypy = "^1.3.0"

[tool.poetry.group.formatting.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[tool.poetry.group.static_type_checking.dependencies]
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py310"]
line-length = 88
verbose = true

[tool.isort]
profile = "black"
verbose = true

[tool.mypy]
strict = true
